index.css
@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');

/* default styles start */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

button {
    background: none;
    border: none;
    font-family: 'Public Sans', sans-serif;
}

button:focus {
    outline: none;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: black;
}

h2 {
    font-weight: 400;
    font-size: 26px;
    color: hsl(233, 26%, 24%);
}



h3,h4,h5,h6 {
    color: hsl(233, 26%, 24%);
    font-weight: 500;
}

h4:hover {
    color: hsl(136, 65%, 51%);
}

p {
    font-weight: 300;
    color: hsl(233, 8%, 62%);
    font-size: 14px;
    margin-top: 1rem;
    line-height: 1.5;
}

.hide {
    display: none;
}

/* default styles end */

body {
    font-family: 'Public Sans', sans-serif;
    background: hsl(0, 0%, 98%);
}

header section:first-of-type {
    display: flex;
    justify-content: space-between;
    padding: 1.3rem 1rem;
}

.desktopNav {
     display: none;
}

.navHeader {
    background: white;
    position: fixed;
    width: 100%;
    z-index: 9999;
}


.navBar {
    display: none;
    justify-content: center;
    position: fixed;
    top: 4rem;
    background: rgba(0, 0, 0, 0.363);
    height: 100vh;
    width: 100%;
    z-index: 999;
}


.navBar nav {
    width: 80%;
    height: 200px;
    border-radius: 5px;
    background: white;
    margin-top: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navBar nav ul {
    display: flex;
    flex-direction: column;
    text-align: center;
    gap: 1rem;
    font-weight: 300;
}

.navBar nav ul li a {
    color: hsl(233, 26%, 24%);
}

main section:first-of-type {
    margin-bottom: 4rem;
}

.heroTextDesktop{
    display: none;
}

.hero {
    background: url(images/bg-intro-mobile.svg);
    background-repeat: no-repeat;
    background-position-y: -3.4rem;
    background-position-x: 1rem;
    overflow: hidden;
    padding: 0 1rem;
    margin-bottom: -7rem;
    max-width: 100%;
}

.heroDesktop {
    display: none;
}

.hero img{
    width: 100%;
    position: relative;
    bottom: 8.2rem;
}

main section:first-of-type{
    padding-top: 4.2rem;
}

main section:first-of-type div:last-of-type {
    text-align: center;
    padding: 0 1rem;
}

/* for all buttons on the main and footer section of the page */

main button {
    font-weight: 700;
    background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
    margin-top: 1rem;
    padding: 0.6rem 2rem;
    border-radius: 1.5rem;
    color: white;
}

main button:hover {
    background: linear-gradient(to right, hsla(136, 100%, 82%, 0.966), hsl(191, 90%, 88%));
}

/* end */

main section:nth-child(2) {
    display: flex;
    flex-direction: column;
    background: hsl(220, 16%, 96%);
    padding: 4rem 1rem;
    gap: 2rem;
}

.firstSection p:last-of-type {
    display: none;
}

.firstSection h2:last-of-type {
    display: none;
}

main section:nth-child(2) > section div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

main > section:first-of-type > div:nth-child(2) {
    display: flex;
    flex-direction: column;
    align-items: center;
}

main section:nth-child(2) h2, p {
    text-align: center;
}

main section:nth-child(2) h2 {
    font-size: 20px;
}

main section:nth-child(2) > section div img {
    width: 60px;
    margin-bottom: 1rem;
}

main section:nth-child(3) {
    display: flex;
    flex-direction: column;
    padding: 4rem 1rem;
    gap: 2rem;
}

main section:nth-child(3) h2 {
    margin-bottom: 1rem;
    text-align: center;
}

main section:nth-child(3) > section {
    display: flex;
    flex-direction: column;
    background: inherit;
}

main section:nth-child(3) section > div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

main section:nth-child(3) section div > div:first-of-type {
    width: 100%;
    margin-bottom: -3px;
}

main section:nth-child(3) section div > div img {
    width:  100%;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}

main section:nth-child(3) section div > div:last-of-type {
    width: 100%;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    padding-bottom: 2rem;
    padding-left: 2rem;
    padding-right: 1rem;
    text-align: left;
    background: white;
    box-shadow: 0 5px 15px hsl(0, 0%, 98%);
}

main section:nth-child(3) section div div p {
    text-align: left;
    font-size: 13px;
}

footer {
    background:hsl(233, 26%, 24%);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2rem 0rem;
}

.logofooter {
    fill: white;
}

.socials {
    display: flex;
    gap: 1rem;
    margin-top: 1rem;
}

.socials svg {
    width: 25px;
}

.socialsIcon:hover {
    fill:hsl(136, 65%, 51%);
    transition: 0.3s 0.5s ease-in-out;
}

footer section:first-of-type {
    display: flex;
    flex-direction: column;
}

footer section:nth-child(2) {
    display: flex;
    flex-direction: column;
}

footer section:nth-child(2) ul{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

footer section:nth-child(2) ul:first-of-type {
    margin: 1rem 0;
}

footer section:nth-child(2) ul li a {
    color: white;
}

footer section:nth-child(2) ul li a:hover {
    color:hsl(136, 65%, 51%);
}

footer section:nth-child(3) {
    display: flex;
    flex-direction: column;
    margin-top: 1rem;
}

footer button {
    font-weight: 700;
    background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
    padding: 1rem 2rem;
    border-radius: 1.5rem;
    color: white;
}

footer button:hover {
    background: linear-gradient(to right, hsla(136, 100%, 82%, 0.966), hsl(191, 90%, 88%));
}

/* media query for desktop view */
@media screen and (min-width: 600px) {
    header section:first-of-type {
        display: none;
    }

    .desktopNav {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        padding: 1.2rem 3rem;
        background: white;
        position: fixed;
        width: 100%;
        z-index: 999;
    }

    .desktopNav ul {
        display: flex;
        gap: 2rem;
    }

    .desktopNav ul li {
        display: flex;
        flex-direction: column;
    }

    .desktopNav ul li div {
        width: 100%;
        height: 2px;
        background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
        position: relative;
        top: 1.6rem;
        opacity: 0;
    }

    .desktopNav ul li a {
        color:hsl(233, 8%, 62%);
    }

    .desktopNav button {
        font-weight: 700;
        background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
        padding: 1rem 2rem;
        border-radius: 1.5rem;
        color: white;
    }


    .desktopNav button:hover {
        background: linear-gradient(to right, hsla(136, 100%, 82%, 0.966), hsl(191, 90%, 88%));
    }

    .hero {
        display: none;
    }

    main section:first-of-type{
        padding-top: 5.3rem;
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-bottom: 0;
        margin-bottom: 0;
    }

    main > section:first-of-type > div:nth-child(2) {
        align-items: start;
        max-width: 50%;
    }


    main section:first-of-type > div:nth-child(2) h2{
        font-size: 60px;
    }

    
    .heroTextMobile {
        display: none;
    }

    .heroTextDesktop{
        display: block;
        font-size: 20px;
    }

    main section:first-of-type > div:nth-child(2) button {
        font-size: 18px;
        padding: 1.3rem 2rem;
        border-radius: 4rem;
    }

    .heroDesktop {
        display: block;
        background: url(images/bg-intro-desktop.svg);
        background-repeat: no-repeat;
        background-position-y: -17rem;
        background-position-x: -3.1rem;
        overflow: hidden;
    }

    .heroDesktop img {
        width: 100%;
        position: relative;
        bottom: 6.8rem;
        left: 9.3rem;
        z-index: 99;
    }

    main > section {
        padding-left: 4rem !important;
    } 

    main > section:nth-child(2) {
        margin-top: -16rem;
    }

    main > section:nth-child(2) section {
        padding-right: 20rem;
    }

    .firstSection p:first-of-type {
        display: none;
    }

    .firstSection h2:first-of-type {
        display: none;
    }

    .firstSection p:last-of-type {
        display: block;
    }
    
    .firstSection h2:last-of-type {
        display: block;
        font-size: 30px;
    }

    main section:nth-child(2) > section {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 2rem;
    }

    main section:nth-child(2) > section div {
        display: flex;
        flex-direction: column;
        align-items: start;
    }

    main section:nth-child(2) > section div img {
        width: 80px;
    }

    main section:nth-child(2) h2, p {
        text-align: left;
    }
    
    main section:nth-child(2) h2 {
        font-size: 25px;
    }

    main section:nth-child(2) p {
        font-size: 18px;
    }

    main section:nth-child(3) h2 {
        text-align: left;
        margin-bottom: -3.5rem;
        z-index: 9;
    }

    main section:nth-child(3) > section {
        flex-direction: row;
        align-items: center;
        padding-right: 18rem;
    }

    main section:nth-child(3) section div > div img {
        height: 250px;
    }

    /* footer section begin*/
    footer {
        flex-direction: row;
        justify-content: space-evenly;
        align-items: start;
    }

    footer section:first-of-type {
        gap: 2rem;
    }

    .socials svg {
        width: 27px;
    }

    footer section:nth-child(2) {
        flex-direction: row;
        align-items: center;
        gap: 5rem;
        position: relative;
        right: 7rem;
    }

    footer section:nth-child(2) ul{
        display: flex;
        flex-direction: column;
        align-items: start;
        gap: 1rem;
    }

    footer section:nth-child(2) ul li a {
        font-size: 17px;
        color: hsl(220, 16%, 96%);
    }

    footer button {
        width: 80%;
        align-self: end;
    }

    .attribution {
        display: none;
    }

    .sb {
        font-size: 26px !important;
    }

    /* footer section end */

}

